# evaluation_processor

./: Dockerfile  Makefile  compose.yaml
data/: checklist.yaml  example_doc.docx
src/: .env  README.md  app.py  pyproject.toml  submit.py  submit_evaluation.py
src/worker/: eval_app.py
src/worker/api/: deps.py
src/worker/core/: config.py  db.py
src/worker/services/: tasks.py
src/worker/utils/: BMW_Trusted_Certificates_Latest.pem  document_loader.py  evaluate_doc.py  genext.py  helper.py
